--- a/0/introduccion.tex
+++ b/0/introduccion.tex
@@ -4,10 +4,10 @@
 \chapter*{Introducción}
 \markboth{Introducción}{Introducción}
 \addcontentsline{toc}{chapter}{Introducción}
-La presente investigación tiene como principal objetivo el desarrollo y propuesta de un modelo de inteligencia para pre-diagnosticar de manera correcta y rápida la naturaleza de un nódulo en la glándula de la tiroides, esto a través de la clasificación de este en benigno o maligno. Se plantea utilizar recursos y algoritmos que brinda el extenso campo de estudio de la inteligencia artificial. En particular, se usarán los extensamente desarrollados algoritmos de Deep Learning como las redes neuronales convolucionales para lograr encontrar patrones en imágenes de ultrasonido de la glándula de tiroides, y así lograr correctos pre-diagnósticos en nuevos casos que se presenten al modelo. Las imágenes de ultrasonido de la glándula de tiroides que se usará para el entrenamiento y prueba de los distintos modelos a entrenar procederán de repositorio en línea debidamente validado.	
+La presente investigación tiene como principal objetivo el desarrollo y propuesta de un modelo de inteligencia para pre-diagnosticar de manera correcta y rápida la naturaleza de un nódulo en la glándula de la tiroides, esto a través de la clasificación de este en benigno o maligno. Se plantea utilizar recursos y algoritmos que brinda el extenso campo de estudio de la Inteligencia Artificial. En particular, se usarán los extensamente desarrollados algoritmos de Deep Learning como las redes neuronales convolucionales para lograr encontrar patrones en imágenes de ultrasonido de la glándula de tiroides, y así lograr correctos pre-diagnósticos en nuevos casos que se presenten al modelo. Las imágenes de ultrasonido de la glándula de tiroides que se usará para el entrenamiento y prueba de los distintos modelos a entrenar procederán de repositorio en línea debidamente validado.	
 
-El proceso que se seguirá para desarrollar un modelo eficaz, capaz de reducir el tiempo que le toma a un médico o radiólogo en detectar y diagnosticar un nódulo tiroideo consiste en una parte inicial de análisis y filtrado de las imágenes, esto con el objetivo de obtener un buen conjunto de datos para el siguiente paso que es el modelado. Se usarán distintos modelos y técnicas dentro del área de la inteligencia artificial y el Deep Learning. Finalmente, se usarán métricas para evaluar cada uno de estos modelos, con el objetivo final de determinar aquel de mejor desempeño. Esto se mostrará a más detalle en la descripción de la metodología de la implementación.
+El proceso que se seguirá para desarrollar un modelo eficaz, capaz de reducir el tiempo que le toma a un médico o radiólogo en detectar y diagnosticar un nódulo tiroideo consiste en una parte inicial de análisis y filtrado de las imágenes, esto con el objetivo de obtener un buen conjunto de datos para el siguiente paso que es el modelado. Se usarán distintos modelos y técnicas dentro del área de la Inteligencia Artificial y el Deep Learning. Finalmente, se usarán métricas para evaluar cada uno de estos modelos, con el objetivo final de determinar aquel de mejor desempeño. Esto se mostrará a más detalle en la descripción de la metodología de la implementación.
 
-Esta herramienta de inteligencia artificial no pretende ser un sustituto al diagnóstico de un profesional especializado en este tipo de casos. Como se verá más adelante, en las investigaciones presentadas como antecedentes que desarrollan, de la misma forma que la presente investigación, modelos capaces de clasificar nódulos en la glándula de tiroides a través de imágenes, el objetivo final es brindar una herramienta eficaz y eficiente que permita a los profesionales del sector a realizar diagnósticos con menos probabilidad de errores. Esto es importante debido a la naturaleza de desarrollo de esta enfermedad, pues con una detección temprana y correcta del tipo de nódulo con el que el especialista se enfrenta, se puede acelerar tratamientos eficaces y evitar aquellos que son totalmente innecesarios para el paciente.
+Esta herramienta de Inteligencia Artificial no pretende ser un sustituto al diagnóstico de un profesional especializado en este tipo de casos. Como se verá más adelante, en las investigaciones presentadas como antecedentes que desarrollan, de la misma forma que la presente investigación, modelos capaces de clasificar nódulos en la glándula de tiroides a través de imágenes, el objetivo final es brindar una herramienta eficaz y eficiente que permita a los profesionales del sector a realizar diagnósticos con menos probabilidad de errores. Esto es importante debido a la naturaleza de desarrollo de esta enfermedad, pues con una detección temprana y correcta del tipo de nódulo con el que el especialista se enfrenta, se puede acelerar tratamientos eficaces y evitar aquellos que son totalmente innecesarios para el paciente.
 
-El problema a abordar, y principal incentivo de la investigación, radica en la limitada precisión que, de manera general, los médicos o radiólogos han ido desarrollando en el diagnóstico de nódulos toroidales, además de las escasas herramientas basadas en inteligencia artificial en este campo. También observar que los casos de cáncer en esta glándula van en aumento en el Perú y el mundo, genera una preocupación y alta necesidad de desarrollar nuevos y mejores métodos o herramientas junto con los grandes avances tecnológicos como la inteligencia artificial que se ha demostrado, aunque de forma muy escasa, ser capaz de reducir los índices de errores en el diagnóstico o clasificación de un nódulo benigno o maligno.
+El problema a abordar, y principal incentivo de la investigación, radica en la limitada precisión que, de manera general, los médicos o radiólogos han ido desarrollando en el diagnóstico de nódulos toroidales, además de las escasas herramientas basadas en Inteligencia Artificial en este campo. También observar que los casos de cáncer en esta glándula van en aumento en el Perú y el mundo, genera una preocupación y alta necesidad de desarrollar nuevos y mejores métodos o herramientas junto con los grandes avances tecnológicos como la Inteligencia Artificial que se ha demostrado, aunque de forma muy escasa, ser capaz de reducir los índices de errores en el diagnóstico o clasificación de un nódulo benigno o maligno.
