--- a/0/titulo.tex
+++ b/0/titulo.tex
@@ -1,5 +1,5 @@
 %\thispagestyle{plain}
 \begin{center}
 	\vspace*{10cm}
-	{DISEÑO DE UN MODELO DE DEEP LEARNING PARA LA CLASIFICACIÓN DE NÓDULOS TIROIDEOS A TRAVÉS DE IMÁGENES DE ULTRASONIDO}
+	{DISEÑO DE UN MODELO DE DEEP LEARNING PARA EL PRE-DIAGNÓSTICO DE NÓDULOS TIROIDEOS A TRAVÉS DE IMÁGENES DE ULTRASONIDO}
 \end{center}
