--- a/2/4_hipotesis/hipotesis.tex
+++ b/2/4_hipotesis/hipotesis.tex
@@ -1,13 +1,13 @@
 \subsection{Hipótesis General}
 HG: \newcommand{\HipotesisGeneral}{
-A través del diseño de un modelo de Deep Learning se logra pre-diagnósticar lo nódulos tiroideos a través de imágenes de ultrasonido.
+A través del diseño de un modelo de Deep Learning se pre-diagnóstica los nódulos tiroideos a través de imágenes de ultrasonido.
 }
 \HipotesisGeneral
 
 
 \subsection{Hipótesis Específicas}
 \newcommand{\Hone}{
-Las mejores características del conjunto de datos son usadas para entrenar y evaluar  modelos permiten un mejor desarrollo del modelo de Deep Learning.
+Las mejores características del conjunto de datos usadas para el proceso de entrenamiento y prueba permiten un mejor desarrollo del modelo de Deep Learning.
 }
 \newcommand{\Htwo}{
 Las técnicas de preprocesamiento a aplicar a las imágenes de ultrasonido del conjunto de datos mejora el desempeño del modelo de Deep Learning.
@@ -16,7 +16,7 @@ Las técnicas de preprocesamiento a aplicar a las imágenes de ultrasonido del c
 Las métricas de evaluación de rendimiento de los modelos de Deep Learning logra una correcta comparación de modelos en la tarea de clasificación de imágenes de ultrasonido.
 }
 \newcommand{\Hfour}{
-    Las arquitecturas de Deep Learning con más alto desempeño en la clasificación de imágenes de ultrasonido demuestran superioridad frente a los demás modelos.
+Las arquitecturas de Deep Learning con más alto desempeño en la clasificación de imágenes de ultrasonido demuestran superioridad frente a los demás modelos.
 }
 
 \begin{itemize}
