--- a/anexos/anexo.tex
+++ b/anexos/anexo.tex
@@ -39,29 +39,45 @@
 			%\centering
 			\small
 			\tabularnewline \specialrule{.1em}{.05em}{.05em}
-			\centering{Título de la tesis} & \multicolumn{6}{p{15cm}}{Diseño de un modelo de Deep Learning para la clasificación de nódulos tiroideos a través de imágenes de ultrasonido}
+			\centering{Título de la tesis} & \multicolumn{6}{p{15cm}}{Diseño de un modelo de Deep Learning para el pre-diagnóstico de nódulos tiroideos a través de imágenes de ultrasonido}
 			\tabularnewline \specialrule{.1em}{.05em}{.05em}
 			\Centering{Problema General}& \Centering{Objetivo General} & \Centering{Hipótesis General} & \Centering{Variables} & \Centering{Método} \\
 			\specialrule{.1em}{.05em}{.05em}
-			{\ProblemaGeneral} & { \ObjetivoGeneral} & {\HipotesisGeneral} \\
-			\cline{1-3}
-			\Centering {Problemas Específicos} & \Centering {Objetivos Específicos} & \Centering {Hipótesis Específicas} \\ %& \Centering {Variables} & \Centering {Método} \\
-			\cline{1-3}
-			{\Pbone} & {\Objone} & {\Hone} & \multirow{6}{3cm}{
-				
-				\centering Dependiente: Pre-diagnóstico de nódulos tiroideos. Independiente: Modelo de Deep Learning.
+			{\ProblemaGeneral} & { \ObjetivoGeneral} & {\HipotesisGeneral} & {
+
+				Dependiente: Pre-diagnóstico de nódulos tiroideos. Independiente: Modelo de Deep Learning.
+
+			} \\
+			\cline{1-4}
+			\Centering {Problemas Específicos} & \Centering {Objetivos Específicos} & \Centering {Hipótesis Específicas} & \Centering {Variables} \\ %& \Centering {Método} \\
+			\cline{1-4}
+			{\Pbone} & {\Objone} & {\Hone} & {
+
+				Dependiente: Desarrollo del modelo de Deep Learning. Independiente: Las características del conjunto de datos.
 
 			} & \multirow{6}{3cm}{
 				
 				\centering Tipo de Investigación: Experimental. Alcance de la investigación: Explicativo.
 			
 			} \\
-			\cline{1-3}
-			{\Pbtwo} & {\Objtwo} & {\Htwo} \\ % & {aa } & {aa } \\
-			\cline{1-3}
-			{\Pbthree} & {\Objthree} & {\Hthree} \\ % & { aa} & {aa } \\
-			\cline{1-3}
-			{\Pbfour} & {\Objfour} & {\Hfour} \\ % & { aa} & { aa} \\
+			\cline{1-4}
+			{\Pbtwo} & {\Objtwo} & {\Htwo}  & {
+				
+				Dependiente: Desempeño del modelo de Deep Learning. Independiente: Técnicas de preprocesamiento.
+			
+			} \\ % & {aa } \\
+			\cline{1-4}
+			{\Pbthree} & {\Objthree} & {\Hthree}  & { 
+				
+				Dependiente: Comparación de modelos en la tarea de clasificación de imágenes de ultrasonido. Independiente: Las métricas de evaluación de rendimiento.
+				
+			} \\ % & {aa } \\
+			\cline{1-4}
+			{\Pbfour} & {\Objfour} & {\Hfour}  & { 
+				
+				Dependiente: Desempeño en la clasificación de imágenes de ultrasonido. Independiente: Las arquitecturas de Deep Learning.
+			
+			} \\ % & { aa} \\
 			\specialrule{.1em}{.05em}{.05em}
 		\end{longtable}
 	\end{landscape}
