--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -14,6 +14,18 @@
 
 %%%papers
 %%%%%%%%%
+
+@article{pr_camacho2022ultrasonicimg,
+	title = {Ultrasonic Imaging and Sensors},
+	author = {Camacho, Jorge and Svilainis, Linas and Gomez Alvarez-Arenas, Tomas},
+	journal = {Sensors},	
+	volume={22},
+	number = {20},
+	pages = {7911-7911},
+	year={2022},
+	doi = {10.3390/s22207911v}
+}
+
 @inproceedings{pr_dosovitskiy2021animageisworth,
 	title = {AN IMAGE IS WORTH 16X16 WORDS: TRANSFORMERS FOR IMAGE RECOGNITION AT SCALE},
 	author = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and Uszkoreit, Jakob and Houlsby, Neil},
