--- a/tesis.tex
+++ b/tesis.tex
@@ -130,7 +130,7 @@ pdfauthor={autor nombres}]{hyperref}
 	\fancyhead[R]{\thepage}}
 %%Encabezados con titulo de tesis y numero de pagina
 \fancypagestyle{special}{%
-	\fancyhead[L]{\changefont Diseño de un modelo de Deep Learning para la clasificación de nódulos tiroideos a través de imágenes de ultrasonido}
+	\fancyhead[L]{\changefont Diseño de un modelo de Deep Learning para el pre-diagnóstico de nódulos tiroideos a través de imágenes de ultrasonido}
 	\fancyhead[R]{\thepage}}
 
 
@@ -302,7 +302,7 @@ pdfauthor={autor nombres}]{hyperref}
 		INGENIERÍA DE TECNOLOGÍAS DE INFORMACIÓN Y SISTEMAS
 		\vspace*{8ex} \\
 		%\textbf
-		{Diseño de un modelo de Deep Learning para la clasificación de nódulos tiroideos a través de imágenes de ultrasonido}
+		{Diseño de un modelo de Deep Learning para el pre-diagnóstico de nódulos tiroideos a través de imágenes de ultrasonido}
 		\vspace*{8ex}\\	
 		Tesis de investigación para el curso Trabajo de Tesis II 
 		\vspace*{8ex} \\	
