--- a/0/aprobacion.tex
+++ b/0/aprobacion.tex
@@ -3,7 +3,7 @@
 \leftline{Esta tesis denominada:}
 \begin{center}
 	%\vspace*{10cm}
-	{DISEÑO DE UN MODELO DE DEEP LEARNING PARA LA CLASIFICACIÓN DE NÓDULOS TIROIDEOS A TRAVÉS DE IMÁGENES DE ULTRASONIDO}
+	{DISEÑO DE UN MODELO DE DEEP LEARNING PARA EL PRE-DIAGNÓSTICO DE NÓDULOS TIROIDEOS A TRAVÉS DE IMÁGENES DE ULTRASONIDO}
 \end{center}
 
 \leftline{ha sido aprobada.}
