--- a/3/metodologia.tex
+++ b/3/metodologia.tex
@@ -19,7 +19,7 @@ La población consiste en imágenes de ultrasonido de la glándula de tiroides c
 La muestra consiste en 3493 imágenes de ultrasonido de la glándula de tiroides recopiladas de 2421 pacientes.
 
 \section{Metodología de Implementación de la Solución}
-La metodología por seguir para implementar un modelo de Deep Learning está basado en gran medida en el conocido ciclo de vida de desarrollo de modelos de inteligencia artificial, del cual gran parte de los antecedentes mostrados anteriormente siguen con algunas variaciones. 
+La metodología por seguir para implementar un modelo de Deep Learning está basado en gran medida en el conocido ciclo de vida de desarrollo de modelos de Inteligencia Artificial, del cual gran parte de los antecedentes mostrados anteriormente siguen con algunas variaciones. 
 
 En el presente caso, se pretende desarrollar un modelo de Deep Learning capaz de brindar ayuda en el diagnóstico médico; por tal motivo, se optó por basar metodología de esta investigación en la de \cite{pr_monroy2021disvc}, modificándolo en cierta medida en el contexto de nódulos tiroideos e imágenes de ultrasonido. A continuación, se presente de forma gráfica la metodología a seguir.
 
