changed fig to tables

--- a/2/3_conceptos/marc_conceptual.tex
+++ b/2/3_conceptos/marc_conceptual.tex
@@ -6,7 +6,7 @@ Inventado por Frank Rosenblatt en 1957, el Perceptrón es la unidad básica de u
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=1.00\textwidth]{2/figures/perceptron.png}
+		\includegraphics[width=0.75\textwidth]{2/figures/perceptron.png}
 		\caption[Perceptrón]{Perceptrón. \\
 		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
 		\label{2:fig207}
@@ -19,8 +19,8 @@ Un Multi-Layer Perceptron (MLP) consiste en la unión de varios perceptrones, co
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=1.00\textwidth]{2/figures/mlp.png}
-		\caption[Perceptrón multicapa]{Perceptrón multicapa. \\
+		\includegraphics[width=0.77\textwidth]{2/figures/mlp.png}
+		\caption[Perceptrón Multicapa]{Perceptrón Multicapa. \\
 		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
 		\label{2:fig208}
 	\end{center}
@@ -34,7 +34,7 @@ A continuación, se presenta el enfoque tradicional del Machine Learning.
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=1.00\textwidth]{2/figures/enfoque_ml.png}
+		\includegraphics[width=0.75\textwidth]{2/figures/enfoque_ml.png}
 		\caption[Enfoque del Machine Learning]{Enfoque del Machine Learning. \\
 		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
 		\label{2:fig209}
@@ -55,8 +55,8 @@ A continuación se presenta de forma gráfica la técnica.
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=1.00\textwidth]{2/figures/transfer_learning.PNG}
-		\caption[Ejemplo de transfer learning]{Ejemplo de transfer learning. \\
+		\includegraphics[width=0.70\textwidth]{2/figures/transfer_learning.PNG}
+		\caption[Ejemplo de Transfer Learning]{Ejemplo de Transfer Learning. \\
 		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
 		\label{2:fig210}
 	\end{center}
@@ -75,8 +75,8 @@ En la siguiente imagen se muestran algunas transformaciones que se pueden hacer 
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=1.00\textwidth]{2/figures/data_aug.PNG}
-		\caption[Ejemplo de data augmentation]{Ejemplo de data augmentation. \\
+		\includegraphics[width=0.85\textwidth]{2/figures/data_aug.PNG}
+		\caption[Ejemplo de Data Augmentation]{Ejemplo de Data Augmentation. \\
 		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
 		\label{2:fig211}
 	\end{center}
