--- a/3/metodologia.tex
+++ b/3/metodologia.tex
@@ -50,7 +50,7 @@ Según \cite{ws_izco2018bdcp} la matriz de confusión es una herramienta que per
 
 \begin{figure}[H]
 	\begin{center}
-		\includegraphics[width=1.00\textwidth]{3/figures/conf_matrix.jpg}
+		\includegraphics[width=0.75\textwidth]{3/figures/conf_matrix.jpg}
 		\caption[Matriz de Confusión]{Matriz de Confusión. \\
 		Fuente: Elaboración propia.}
 		\label{3:fig302}
@@ -105,14 +105,34 @@ precision=\frac{TP}{TP+FP}
 
 Además, se determinó el presupuesto necesario para la elaboración completa de la investigación.
 
-\begin{figure}[!ht]
-	\begin{center}
-		\includegraphics[width=1.00\textwidth]{3/figures/presupuesto.jpg}
-		\caption[Presupuesto]{Presupuesto.\\
-			Fuente: Elaboración propia.}
-		\label{3:fig303}
-	\end{center}
-\end{figure}
+\begin{table}[H]
+	\caption[Presupuesto]{Presupuesto.}
+	\label{3:table1}
+	\centering
+	\small
+	\begin{tabular}{llll}
+		\specialrule{.1em}{.05em}{.05em}
+		{Grupo} & {Item} & {Costo (soles)} & {Subtotal} \\
+		\specialrule{.1em}{.05em}{.05em}
+		\multirow{2}{3cm}{Recursos materiales} & {Laptop} & {S/ 6,500.00} & {} \\
+		{} & {Materiales de escritorio} & {S/ 100.00} & {6,600.00} \\
+		\cline{1-4}
+		\multirow{2}{3cm}{Software y trámites} & {Reserva de tema} & {S/ 2,700.00} & {} \\
+		{} & {Derecho de inscripción} & {S/ 800.00} & {} \\
+		{} & {Derecho de sustentación} & {S/ 1,500.00} & {} \\
+		{} & {Software} & {S/ 50.00} & {} \\
+		{} & {Renta de servidor en la nube} & {S/ 224.15} & {S/ 5,274.15} \\
+		\cline{1-4}
+		\multirow{2}{3cm}{Extras} & {Consultorías} & {S/ 100.00} & {} \\
+		{} & {Movilidad} & {S/ 200.00} & {S/ 300.00} \\
+		\specialrule{.1em}{.05em}{.05em} 
+		{} & {Total} & {} & {S/ 12,174.15} \\
+		\specialrule{.1em}{.05em}{.05em}
+	\end{tabular}
+	\begin{flushleft}	
+		\small Fuente: Elaboración propia.
+	\end{flushleft}
+\end{table}
 
 
 
